# oz_django_project

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: ci.yml
oz_django_project/: asgi.py  settings.py  urls.py  wsgi.py
